--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -57,6 +57,10 @@
 
 }
 
+.projects-page {
+    height: 80% !important;
+}
+
 .about-page, 
 .contact-page,
 .projects-page,
