--- a/src/components/TextSphere/index.scss
+++ b/src/components/TextSphere/index.scss
@@ -2,7 +2,6 @@
     position: absolute;
     top: 0;
     width: 100%;
-    height: 100vh;
     display: flex;
     justify-content: right;
     align-items: center;
